--- a/Resources/Private/Translations/de/NodeTypes/Content/Cookie.xlf
+++ b/Resources/Private/Translations/de/NodeTypes/Content/Cookie.xlf
@@ -1,18 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <xliff version="1.2" xmlns="urn:oasis:names:tc:xliff:document:1.2">
-	<file original="" product-name="KaufmannDigital.GDPR.CookieConsent" source-language="en" datatype="plaintext">
+	<file original="" product-name="KaufmannDigital.GDPR.CookieConsent" source-language="en" datatype="plaintext" target-language="de">
 		<body>
 			<trans-unit id="properties.name.ui.inline.editorOptions.placeholder" xml:space="preserve">
 				<source>Insert cookie name...</source>
+				<target state="final">Cookie Name eintragen ...</target>
 			</trans-unit>
 			<trans-unit id="properties.description.ui.inline.editorOptions.placeholder" xml:space="preserve">
 				<source>Insert cookie description...</source>
+				<target state="final">Cookie Beschreibung eintragen...</target>
 			</trans-unit>
 			<trans-unit id="properties.priority" xml:space="preserve">
 				<source>Priority</source>
+				<target state="final">Priorität</target>
 			</trans-unit>
 			<trans-unit id="properties.priority.ui.help.message" xml:space="preserve">
-				<source>The priority determines the loading order of the different cookies. Higher numbers guarantee earlier loading times.</source>
+				<source>Die Priorität bestimmt die Ladereihenfolge der unterschiedlichen Cookies. Höhere Zahlen garantieren frühere Ladezeiten.</source>
 			</trans-unit>
 		</body>
 	</file>
