--- a/Resources/Private/Translations/de/NodeTypes/Content/CookieGroup.xlf
+++ b/Resources/Private/Translations/de/NodeTypes/Content/CookieGroup.xlf
@@ -1,20 +1,27 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <xliff version="1.2" xmlns="urn:oasis:names:tc:xliff:document:1.2">
-	<file original="" product-name="KaufmannDigital.GDPR.CookieConsent" source-language="en" datatype="plaintext">
+	<file original="" product-name="KaufmannDigital.GDPR.CookieConsent" source-language="en" datatype="plaintext" target-language="de">
 		<body>
 			<trans-unit id="ui.label" xml:space="preserve">
 				<source>Cookie Group</source>
+				<target state="final">Cookie-Gruppe</target>
 			</trans-unit>
 			<trans-unit id="ui.inspector.groups.cookie.label" xml:space="preserve">
 				<source>Cookie Group</source>
+				<target state="final">Cookie-Gruppe</target>
 			</trans-unit>
 			<trans-unit id="properties.headline.ui.inline.editorOptions.placeholder" xml:space="preserve">
 				<source>Insert group title...</source>
+				<target state="final">Gruppenüberschrift eintragen...</target>
 			</trans-unit>
 			<trans-unit id="properties.description.ui.inline.editorOptions.placeholder" xml:space="preserve">
 				<source>Insert group description...</source>
+				<target state="final">Gruppenbeschreibung eintragen...</target>
 			</trans-unit>
-
+            <trans-unit id="hideDetails" xml:space="preserve">
+				<source>Hide details</source>
+				<target state="final">Details ausblenden</target>
+			</trans-unit>
 		</body>
 	</file>
 </xliff>
