--- a/Resources/Private/Translations/de/NodeTypes/Document/CookieSettingsPage.xlf
+++ b/Resources/Private/Translations/de/NodeTypes/Document/CookieSettingsPage.xlf
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <xliff version="1.2" xmlns="urn:oasis:names:tc:xliff:document:1.2">
-	<file original="" product-name="KaufmannDigital.GDPR.CookieConsent" source-language="en" datatype="plaintext">
+	<file original="" product-name="KaufmannDigital.GDPR.CookieConsent" source-language="en" datatype="plaintext" target-language="de">
 		<body>
 			<trans-unit id="ui.label" xml:space="preserve">
 				<source>Cookie Settings Page</source>
+				<target state="final">Cookie Einstellungen</target>
 			</trans-unit>
 		</body>
 	</file>
