--- a/Resources/Private/Translations/en/NodeTypes/Content/Cookie/Attribute.xlf
+++ b/Resources/Private/Translations/en/NodeTypes/Content/Cookie/Attribute.xlf
@@ -1,18 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <xliff version="1.2" xmlns="urn:oasis:names:tc:xliff:document:1.2">
-	<file original="" product-name="KaufmannDigital.GDPR.CookieConsent" source-language="en" datatype="plaintext" target-language="de">
+	<file original="" product-name="KaufmannDigital.GDPR.CookieConsent" source-language="en" datatype="plaintext">
 		<body>
 			<trans-unit id="ui.label" xml:space="preserve">
 				<source>Cookie Attribute</source>
-				<target state="final">Cookie-Attribut</target>
 			</trans-unit>
 			<trans-unit id="properties.label.ui.inline.editorOptions.placeholder" xml:space="preserve">
 				<source>Insert label...</source>
-			    <target state="final">Label eintragen...</target>
 			</trans-unit>
 			<trans-unit id="properties.value.ui.inline.editorOptions.placeholder" xml:space="preserve">
 				<source>Insert value...</source>
-			    <target state="final">Wert eintragen...</target>
 			</trans-unit>
 		</body>
 	</file>
