--- a/Resources/Private/Translations/en/NodeTypes/Content/CookieSettings.xlf
+++ b/Resources/Private/Translations/en/NodeTypes/Content/CookieSettings.xlf
@@ -1,73 +1,58 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <xliff version="1.2" xmlns="urn:oasis:names:tc:xliff:document:1.2">
-	<file original="" product-name="KaufmannDigital.GDPR.CookieConsent" source-language="en" datatype="plaintext" target-language="de">
+	<file original="" product-name="KaufmannDigital.GDPR.CookieConsent" source-language="en" datatype="plaintext">
 		<body>
 			<trans-unit id="ui.label" xml:space="preserve">
 				<source>Cookie Settings</source>
-				<target state="final">Cookie Einstellungen</target>
 			</trans-unit>
 			<trans-unit id="ui.inspector.groups.cookieSettings.label" xml:space="preserve">
 				<source>Cookie Settings</source>
-				<target state="final">Cookie Einstellungen</target>
 			</trans-unit>
 			<trans-unit id="properties.headline.ui.inline.editorOptions.placeholder" xml:space="preserve">
 				<source>Insert title...</source>
-				<target state="final">Überschrift eintragen...</target>
 			</trans-unit>
 			<trans-unit id="properties.mainDescription.ui.inline.editorOptions.placeholder" xml:space="preserve">
 				<source>Insert description...</source>
-				<target state="final">Beschreibung eintragen...</target>
 			</trans-unit>
 			<trans-unit id="properties.individualSettingsDescription.ui.inline.editorOptions.placeholder" xml:space="preserve">
 				<source>Insert description...</source>
-				<target state="final">Beschreibung eintragen...</target>
 			</trans-unit>
 			<trans-unit id="properties.imprintLink" xml:space="preserve">
 				<source>Link to imprint</source>
-				<target state="final">Link zum Impressum</target>
 			</trans-unit>
 			<trans-unit id="properties.dataProtectionPolicyLink" xml:space="preserve">
 				<source>Link to data protection policy</source>
-				<target state="final">Link zur Datenschutzerklärung</target>
 			</trans-unit>
 			<trans-unit id="properties.acceptAllButtonLabel" xml:space="preserve">
 				<source>"Accept all" label</source>
-				<target state="final">Label "Alle akzeptieren"</target>
 			</trans-unit>
 
 			<trans-unit id="properties.saveButtonLabel" xml:space="preserve">
 				<source>"Save" label</source>
-				<target state="final">Label "Speichern"</target>
 			</trans-unit>
 
 			<trans-unit id="properties.acceptNecessaryCookiesLabel" xml:space="preserve">
 				<source>"Accept necessary cookies" label</source>
-				<target state="final">Label "Notwendige Cookies akzeptieren"</target>
 			</trans-unit>
 
 			<trans-unit id="properties.imprintLabel" xml:space="preserve">
 				<source>"Imprint" label</source>
-				<target state="final">Label "Impressum"</target>
 			</trans-unit>
 
 			<trans-unit id="properties.dataProtectionPolicyLabel" xml:space="preserve">
 				<source>"Data protection policy" label</source>
-				<target state="final">Label "Datenschutzerklärung"</target>
 			</trans-unit>
 
 			<trans-unit id="properties.openIndividualSettingsLabel" xml:space="preserve">
 				<source>"Individual settings" label</source>
-				<target state="final">Label "Individuelle Einstellungen"</target>
 			</trans-unit>
 
 			<trans-unit id="properties.closeIndividualSettingsLabel" xml:space="preserve">
 				<source>"Close settings" label</source>
-				<target state="final">Label "Einstellungen schließen"</target>
 			</trans-unit>
 
 			<trans-unit id="properties.versionDate" xml:space="preserve">
 				<source>Version date</source>
-				<target state="final">Versions-Datum</target>
 			</trans-unit>
 		</body>
 	</file>
