--- a/Resources/Private/Translations/en/NodeTypes/Content/CookieSettings.xlf
+++ b/Resources/Private/Translations/en/NodeTypes/Content/CookieSettings.xlf
@@ -55,11 +55,11 @@
 				<source>Version date</source>
 			</trans-unit>
 
-            <trans-unit id="properties.cookieTtl" xml:space="preserve">
+            <trans-unit id="properties.decisionTtl" xml:space="preserve">
 				<source>TTL (Decision time in seconds)</source>
 			</trans-unit>
 
-            <trans-unit id="properties.cookieTtl.ui.help.message" xml:space="preserve">
+            <trans-unit id="properties.decisionTtl.ui.help.message" xml:space="preserve">
 				<source>Number of seconds until cookie settings are displayed and confirmed again. Example values are: 86400 (1 day), 604800 (1 week), 2592000 (30 days), 31536000 (1 year)</source>
 			</trans-unit>
 
