--- a/Resources/Private/Translations/en/NodeTypes/Content/CookieSettings.xlf
+++ b/Resources/Private/Translations/en/NodeTypes/Content/CookieSettings.xlf
@@ -70,6 +70,10 @@
             <trans-unit id="properties.closeButtonEnabled.ui.help.message" xml:space="preserve">
 				<source>Shows an "X" on the right top of the banner, if enabled. A click on the X hides the banner, but without making a decision. It re-appears on the next pageload.</source>
 			</trans-unit>
+
+			<trans-unit id="properties.excludedDocuments" xml:space="preserve">
+				<source>Exclude for Documents</source>
+			</trans-unit>
 		</body>
 	</file>
 </xliff>
