Task: remove colorpicker package and replace with plain textfield

--- a/Resources/Private/Translations/de/NodeTypes/Content/CookieSettings.xlf
+++ b/Resources/Private/Translations/de/NodeTypes/Content/CookieSettings.xlf
@@ -100,13 +100,13 @@
 				<source>Schwarz</source>
 			</trans-unit>
 			<trans-unit id="properties.backgroundColor" xml:space="preserve">
-				<source>Hintergrundfarbe</source>
+				<source>Hintergrundfarbe (HEX)</source>
 			</trans-unit>
 			<trans-unit id="properties.buttonTextColor" xml:space="preserve">
 				<source>Button Textfarbe</source>
 			</trans-unit>
 			<trans-unit id="properties.themeColor" xml:space="preserve">
-				<source>Theme-Farbe</source>
+				<source>Theme-Farbe (HEX)</source>
 			</trans-unit>
 		</body>
 	</file>
