--- a/Resources/Private/Translations/en/NodeTypes/Content/CookieGroup.xlf
+++ b/Resources/Private/Translations/en/NodeTypes/Content/CookieGroup.xlf
@@ -14,6 +14,10 @@
 			<trans-unit id="properties.description.ui.inline.editorOptions.placeholder" xml:space="preserve">
 				<source>Insert group description...</source>
 			</trans-unit>
+			<trans-unit id="details" xml:space="preserve">
+				<source>Details</source>
+				<target state="final">Details</target>
+			</trans-unit>
 			<trans-unit id="hideDetails" xml:space="preserve">
 				<source>Hide details</source>
 			</trans-unit>
